alignment fixes for dmf

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.8em;
     margin: 0;
     color: #444;
@@ -26,7 +26,7 @@ body {
 
     section {
         padding: 3em;
-        grid-column: 1 / span 4;
+        grid-column: 3 / span 4;
     }
 
     #logo {
